cmake_minimum_required(VERSION 2.8)
project( Snakes-Laders )
include_directories(C:/Users/MuraliR/Downloads/opencv/build/include)
set (OpenCV_DIR C:/Users/MuraliR/Downloads/opencv/build/include)
add_executable( Display-image-project src/hello.c )
target_link_libraries( Display-image-project ${OpenCV_LIBS} )
